# FLTK-Platformer

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/: globals.h  main.cpp
src/controller/: GameController.cpp  GameController.h
src/model/: GameModel.cpp  GameModel.h  GameObject.cpp  GameObject.h  Player.cpp  Player.h
src/view/: GUIButton.cpp  GUIButton.h  GameView.cpp  GameView.h
